Make option text responsive, fix chart not showing when there's no data

--- a/src/app/pages/poll-details/poll-details.component.scss
+++ b/src/app/pages/poll-details/poll-details.component.scss
@@ -133,6 +133,7 @@
         flex-grow: 1;
         font-size: 1.5rem;
         font-family: Quicksand-SemiBold, sans-serif;
+        word-break: break-word;
       }
       .option-percent {
         color: $txt;
@@ -151,7 +152,7 @@
         background-color: #eee;
         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
         width: 400px;
-        height: 60px;
+        min-height: 60px;
 
         transition: background-color 0.2s;
 
